tests/integration/security/sds_ingress/multiple_tls_gateway/testdata/bookinfo-multiple-gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway-1
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https-bookinfo-1
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "bookinfo-credential-1" # must be the same as secret
    hosts:
    - "bookinfo1.example.com"
