tests/integration/security/sds_ingress/multiple_tls_gateway/testdata/bookinfo-multiple-virtualservices.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo1
spec:
  hosts:
  - "bookinfo1.example.com"
  gateways:
  - bookinfo-gateway-1
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
